--- a/.gitignore
+++ b/.gitignore
@@ -470,5 +470,5 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 FemmployeeMod\FemmployeeModUnityProject\Assets\Plugins
-
+FemmployeeMod\Lethal CompanyModInstance
 
