--- a/.gitignore
+++ b/.gitignore
@@ -471,4 +471,4 @@ FodyWeavers.xsd
 *.sln.iml
 FemmployeeMod\FemmployeeModUnityProject\Assets\Plugins
 FemmployeeMod\Lethal CompanyModInstance
-
+FemmployeeMod\FemmployeeMod\bin
