--- a/.gitignore
+++ b/.gitignore
@@ -472,3 +472,6 @@ FodyWeavers.xsd
 FemmployeeMod\FemmployeeModUnityProject\Assets\Plugins
 FemmployeeMod\Lethal CompanyModInstance
 FemmployeeMod\FemmployeeMod\bin
+LethalCompanyInputUtils.dll
+ModelReplacementAPI.dll
+MoreSuits.dll
