--- a/FemmployeeMod.csproj
+++ b/FemmployeeMod.csproj
@@ -1,9 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
     <LethalCompanyPath>D:\Documents\GitHub\FemmployeeMod\Lethal Company Mod Instance</LethalCompanyPath>
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+    <PropertyGroup>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>Embedded</DebugType>
   </PropertyGroup>
   
   <PropertyGroup>
@@ -31,6 +36,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" IncludeAssets="compile" />
     <PackageReference Include="UnityEngine.Modules" Version="2022.3.9" IncludeAssets="compile" />
     <PackageReference Include="HarmonyX" Version="2.10.2" IncludeAssets="compile" />
+    
   </ItemGroup>
 
   <ItemGroup>
@@ -49,6 +55,9 @@
     <Reference Include="MoreSuits">
       <HintPath>MoreSuits.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Collections">
+      <HintPath>..\Lethal Company Mod Instance\Lethal Company_Data\Managed\Unity.Collections.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.InputSystem">
       <HintPath>$(LethalCompanyPath)\Lethal Company_Data\Managed\Unity.InputSystem.dll</HintPath>
     </Reference>
@@ -65,7 +74,8 @@
       <HintPath>$(LethalCompanyPath)\Lethal Company_Data\Managed\UnityEngine.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
-
+  
+  
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="netcode-patch &quot;$(TargetPath)&quot; @(ReferencePathWithRefAssemblies->'&quot;%(Identity)&quot;', ' ')" />
     <Exec Command="copy /Y &quot;$(TargetDir)$(ProjectName).dll&quot; &quot;$(LethalCompanyPath)\BepInEx\plugins&quot;  &#xD;&#xA;" />
