--- a/FemmployeeMod.csproj
+++ b/FemmployeeMod.csproj
@@ -2,82 +2,75 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Nullable>enable</Nullable>
     <LethalCompanyPath>D:\Documents\GitHub\FemmployeeMod\Lethal Company Mod Instance</LethalCompanyPath>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
-  <PropertyGroup>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>Embedded</DebugType>
-  </PropertyGroup>
-
+  
   <PropertyGroup>
     <RestoreSources>$(RestoreSources);https://api.nuget.org/v3/index.json;https://nuget.bepinex.dev/v3/index.json</RestoreSources>
   </PropertyGroup>
 
+  <!-- Embed Debug Symbols for Easier Debugging -->
+  <PropertyGroup>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>embedded</DebugType>
+    <PathMap>$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)'))=./</PathMap>
+  </PropertyGroup>
+  
   <PropertyGroup>
     <ReferencePath>$(ReferencePath);$(LethalCompanyPath)\Lethal Company_Data\Managed</ReferencePath>
     <ReferencePath>$(ReferencePath);$(LethalCompanyPath)\Lethal Company_Data\Plugins</ReferencePath>
     <ReferencePath>$(ReferencePath);$(LethalCompanyPath)\BepinEx\plugins</ReferencePath>
   </PropertyGroup>
 
+  <!-- Disable Publicizer Warnings -->
+  <PropertyGroup>
+    <NoWarn>$(NoWarn);CS0436</NoWarn>
+  </PropertyGroup>
+  
   <ItemGroup>
     <None Remove="femmployeemodbundle" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="femmployeemodbundle" />
   </ItemGroup>
-
+  
   <ItemGroup>
-    <PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.1" PrivateAssets="all" />
-    <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
-    <PackageReference Include="BepInEx.Core" Version="5.*" IncludeAssets="compile" />
-    <PackageReference Include="BepInEx.PluginInfoProps" Version="1.*" IncludeAssets="compile" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" IncludeAssets="compile" />
-    <PackageReference Include="UnityEngine.Modules" Version="2022.3.9" IncludeAssets="compile" />
-    <PackageReference Include="HarmonyX" Version="2.10.2" IncludeAssets="compile" />
+    <!-- Unity -->
+    <PackageReference Include="UnityEngine.Modules" Version="2022.3.9" IncludeAssets="compile" PrivateAssets="all"/>
+    
+    <!-- BepInEx -->
+    <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all"/>
+    <PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.1" PrivateAssets="all"/>
+    <PackageReference Include="BepInEx.Core" Version="5.*" PrivateAssets="all"/>
+    <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" PrivateAssets="all"/>
+    
+    <!-- Lethal Company -->
+    <PackageReference Include="LethalCompany.GameLibs.Steam" Version="*-*" Publicize="true" PrivateAssets="all"/>
 
+    <!-- Other Mod Dependencies -->
+    <PackageReference Include="Evaisa.LethalLib" Version="0.15.*" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Assembly-CSharp">
-      <HintPath>$(LethalCompanyPath)\Lethal Company_Data\Managed\Assembly-CSharp.dll</HintPath>
-    </Reference>
     <Reference Include="LethalCompanyInputUtils">
       <HintPath>LethalCompanyInputUtils.dll</HintPath>
-    </Reference>
-    <Reference Include="LethalLib">
-      <HintPath>LethalLib.dll</HintPath>
     </Reference>
     <Reference Include="ModelReplacementAPI">
       <HintPath>ModelReplacementAPI.dll</HintPath>
     </Reference>
-    <Reference Include="MoreSuits">
+    
+    <Reference Publicize ="true" Include="ModelReplacementAPI"><HintPath>ModelReplacementAPI.dll</HintPath></Reference>
+   
+     <Reference Include="MoreSuits">
       <HintPath>MoreSuits.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Collections">
-      <HintPath>..\Lethal Company Mod Instance\Lethal Company_Data\Managed\Unity.Collections.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.InputSystem">
-      <HintPath>$(LethalCompanyPath)\Lethal Company_Data\Managed\Unity.InputSystem.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.InputSystem.ForUI">
-      <HintPath>$(LethalCompanyPath)\Lethal Company_Data\Managed\Unity.InputSystem.ForUI.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Netcode.Runtime">
-      <HintPath>$(LethalCompanyPath)\Lethal Company_Data\Managed\Unity.Netcode.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.TextMeshPro">
-      <HintPath>$(LethalCompanyPath)\Lethal Company_Data\Managed\Unity.TextMeshPro.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>$(LethalCompanyPath)\Lethal Company_Data\Managed\UnityEngine.UI.dll</HintPath>
-    </Reference>
   </ItemGroup>
+  
 
 
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+  <Target Name="NetcodePatcher" AfterTargets="Build">
     <Exec Command="netcode-patch &quot;$(TargetPath)&quot; @(ReferencePathWithRefAssemblies->'&quot;%(Identity)&quot;', ' ')" />
-    <Exec Command="copy /Y &quot;$(TargetDir)$(ProjectName).dll&quot; &quot;$(LethalCompanyPath)\BepInEx\plugins\FemmployeeMod&quot;  &#xD;&#xA;" />
+    <Exec Command="copy /Y &quot;$(TargetDir)$(ProjectName).dll&quot; &quot;$(LethalCompanyPath)\BepInEx\plugins\TiltedTomb-The_Femmployee_Mod&quot;  &#xD;&#xA;" />
   </Target>
 </Project>
